# forkclaw

./: .editorconfig  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pr_desc.txt  run_test.py
apps/backend/: alembic.ini  benchmark_subagents.py  package.json  pyproject.toml  run_test.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_agent_os.py  0002_agent_profile_configuration_fields.py  0003_link_tasks_to_cron_jobs.py  0004_activity_observability_fields.py  0005_tool_catalog_policy_and_cache.py  0006_subagent_sessions_mvp.py  0007_subagent_runtime_hardening.py  0008_memory_recall_v1.py  0008_memory_runtime_v1.py  0008_memory_v1_admin_core.py  0009_memory_runtime_v1.py  (+4 more)
apps/backend/app/: main.py
apps/backend/tests/: conftest.py  test_activity.py  test_agent_os_endpoints.py  test_agent_os_service.py  test_agent_profile_defaults.py  test_api_errors.py  test_approvals.py  test_config.py  test_core_secrets_error_handling.py  test_execution_streaming.py  test_internal.py  test_logging_config.py  test_memory_admin.py  test_memory_endpoints.py  test_memory_integration_contracts.py  test_memory_performance.py  test_memory_policy.py  test_memory_recall.py  test_nanobot_adapter.py  test_prompt_context_service.py  test_provider_catalog.py  test_schedules.py  test_schema_and_migrations.py  test_settings.py  test_settings_operational.py  test_shell_tools.py  test_skills.py  test_subagent_delegation.py  test_tool_catalog.py  test_tool_policy.py  test_web_tools.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+246 files in other folders)
