[package]
name = "nanobot_agent_console"
version = "0.1.0"
description = "Desktop shell for the Nanobot Agent Console"
authors = ["Felipe Sousa"]
edition = "2021"

[lib]
name = "nanobot_agent_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
